--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   <script>
     var apiRoot = ''
     var openid = ''
+    var ticket = ''
+    var loginUrl = 'https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxa166ce145510c378&redirect_uri=http%3a%2f%2ftestmpapi.redseawetoo.com%2fuser%2ffault%2fauthorize&response_type=code&scope=snsapi_privateinfo&agentid=13&state=app2#wechat_redirect'
   </script>
   <div id="app"></div>
-  <!-- built files will be auto injected -->
 </body>
 
 </html>
