--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-  <title>sao-device-fault</title>
+  <title>故障处理</title>
 </head>
 
 <body>
